# vcreate_dtype_bitpattern

./: CMakeLists.txt  README.md  test_arm.cc  vcreate_dtype_bitpattern.cc
